--- a/client/src/components/calendar/calendar.css
+++ b/client/src/components/calendar/calendar.css
@@ -40,7 +40,7 @@ Toolbar Elements:
 
 /* customizing event styles */
 .rbc-toolbar button {
-    background-color: #afeec9;
+    background-color: #ffffff;
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     /* Replace with your desired background color */
