Adding more utilities to _utilities.sass

--- a/client/src/styles/_utilities.sass
+++ b/client/src/styles/_utilities.sass
@@ -97,3 +97,9 @@
 
 .text-black
     color: $color-black
+
+// ___________________________________
+// Cursor Utilities
+
+.cursor-pointer
+    cursor: pointer
