Dashboard, header, and footer.

--- a/client/src/styles/_components.sass
+++ b/client/src/styles/_components.sass
@@ -1,1 +1,31 @@
 // _components.sass
+
+// Header
+header
+    background-color: $color-teal-dark
+    height: 100px
+    min-width: 100vw
+
+    svg
+        height: 100%
+        padding: 10px
+
+    a
+        color: $color-white
+        text-decoration: none
+        font-size: 25px
+        font-weight: 700
+        padding: 0 10px
+
+    label
+        color: $color-white
+        font-size: 20px
+        font-weight: 400
+        padding: 0 10px
+
+// Footer
+footer
+    min-width: 100vw
+
+    a
+        padding: 0 10px
