--- a/client/src/styles/_utilities.sass
+++ b/client/src/styles/_utilities.sass
@@ -101,5 +101,8 @@
 // ___________________________________
 // Cursor Utilities
 
-.cursor-pointer
+.hover-pointer
     cursor: pointer
+
+    &:hover
+        cursor: pointer
