--- a/client/src/styles/_pages.sass
+++ b/client/src/styles/_pages.sass
@@ -2,9 +2,11 @@
 
 // ___________________________________
 // Login
-
 .login-logo
     width: 100%
     max-width: 500px
     padding: 5%
     border-radius: 60px
+
+// ___________________________________
+// Dashboard
