--- a/client/src/styles/_variables.sass
+++ b/client/src/styles/_variables.sass
@@ -1,8 +1,9 @@
 // _variables.sass
 
 // Colors
-$color-teal-light: #71d3c3
-$color-teal-dark: #2a8a82
+$color-teal-light: #72c0bc
+$color-teal-dark: #0c6c74
+
 $color-blue-light: #0371e7
 $color-blue-dark: #094b92
 $color-green: #28a745
