--- a/client/src/styles/_variables.sass
+++ b/client/src/styles/_variables.sass
@@ -3,7 +3,8 @@
 // Colors
 $color-teal-light: #72c0bc
 $color-teal-dark: #0c6c74
-
+$color-pink-light: #f7dae4
+$color-pink-dark: #f3b9c6
 $color-blue-light: #0371e7
 $color-blue-dark: #094b92
 $color-green: #28a745
