--- a/client/src/styles/_pages.sass
+++ b/client/src/styles/_pages.sass
@@ -10,3 +10,40 @@
 
 // ___________________________________
 // Dashboard
+.dashboard
+    main
+        padding: 20px 5vw
+
+        .dashboard-column-left
+            width: 70%
+
+        .dashboard-column-right
+            width: 30%
+
+            .offers-list
+                height: 500px
+
+                h1
+                    font-size: 30px
+                    margin-bottom: 20px
+
+        .user-banner
+            img
+                width: 150px
+                border-radius: 50%
+
+            h1
+                font-size: 40px
+
+            svg
+                height: 20px
+                width: 20px
+
+            button
+                background-color: $color-teal-dark
+                border: none
+                border-radius: 15px
+                padding: 10px
+                margin-left: 10px
+                font-weight: 700
+                color: $color-white
