--- a/client/src/styles/_utilities.sass
+++ b/client/src/styles/_utilities.sass
@@ -37,6 +37,9 @@
 .height-50
     height: 50%
 
+.full-width
+    width: 100vw
+
 .fullscreen
     min-width: 100vw
     min-height: 100vh
@@ -53,6 +56,9 @@
 
 .bg-teal-dark
     background-color: $color-teal-dark
+
+.bg-pink-light
+    background-color: $color-pink-light
 
 .bg-green
     background-color: $color-green
