--- a/client/src/styles/_components.sass
+++ b/client/src/styles/_components.sass
@@ -95,3 +95,28 @@ footer
 .my-offers::-webkit-scrollbar
     width: 0.1rem
     height: 0.1rem
+
+.friends-popup::-webkit-scrollbar-thumb
+    background-color: transparent
+
+.friends-popup::-webkit-scrollbar-track
+    background-color: transparent
+
+.friends-popup::-webkit-scrollbar
+    width: 0.1rem
+    height: 0.1rem
+
+// Friends List Pop-Up
+.friends-popup
+    background-color: $color-white
+    padding: 20px
+    border-radius: 10px
+    z-index: 1001
+    overflow: auto
+    height: 500px
+    width: 400px
+
+    h1
+        font-size: 30px
+        font-weight: 700
+        text-align: center
