--- a/client/src/styles/_utilities.sass
+++ b/client/src/styles/_utilities.sass
@@ -112,3 +112,17 @@
 
     &:hover
         cursor: pointer
+
+// ___________________________________
+// Overlay Utilities
+.overlay
+    position: fixed
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    background-color: rgba(0, 0, 0, 0.6) /* Semi-transparent black background */
+    display: flex
+    justify-content: center
+    align-items: center
+    z-index: 1000 /* Ensure it appears in front of other elements */
