More dashboard changes. Working friends list pop-up.

--- a/client/src/styles/_pages.sass
+++ b/client/src/styles/_pages.sass
@@ -12,8 +12,6 @@
 // Dashboard
 .dashboard
     main
-        padding: 20px 5vw
-
         .dashboard-column-left
             width: 70%
 
@@ -28,6 +26,11 @@
                     margin-bottom: 20px
 
         .user-banner
+            min-width: 100vw
+            padding: 20px 20%
+            margin-bottom: 20px
+            background-color: $color-gray-light
+
             img
                 width: 150px
                 border-radius: 50%
