--- a/client/src/styles/_utilities.sass
+++ b/client/src/styles/_utilities.sass
@@ -23,6 +23,14 @@
     display: flex
     flex-direction: row
 
+.flex-right
+    display: flex
+    justify-content: flex-end
+
+.flex-left
+    display: flex
+    justify-content: flex-start
+
 // ___________________________________
 // Size Utilities
 .width-100
@@ -126,3 +134,10 @@
     justify-content: center
     align-items: center
     z-index: 1000 /* Ensure it appears in front of other elements */
+
+// Shadow Utilities
+.shadow
+    box-shadow: 0 0 10px rgba(54, 55, 58, 0.24)
+
+.shadow-harsh
+    box-shadow: 0 0 10px rgba(25, 25, 26, 0.699)
