--- a/client/src/styles/_variables.sass
+++ b/client/src/styles/_variables.sass
@@ -11,6 +11,7 @@ $color-green: #28a745
 $color-yellow: #ffc107
 $color-red: #dc3545
 $color-white: #f8f9fa
+$color-gray-light: #cfd9dd
 $color-black: #31373d
 
 // Border Radius
