--- a/client/src/styles/_components.sass
+++ b/client/src/styles/_components.sass
@@ -6,9 +6,16 @@ header
     height: 100px
     min-width: 100vw
 
-    svg
+    .logo
+        width: 280px
         height: 100%
-        padding: 10px
+        display: flex
+        justify-content: flex-end
+
+        svg
+            height: 100%
+            width: 100px
+            padding: 10px
 
     a
         color: $color-white
@@ -22,6 +29,17 @@ header
         font-size: 20px
         font-weight: 400
         padding: 0 10px
+
+    .navbar
+        width: 450px
+
+    form
+        width: 280px
+
+        input
+            padding: 5px
+            width: 200px
+            margin: 0 10px
 
 // Footer
 footer
@@ -63,6 +81,7 @@ footer
     padding: 20px
     border-radius: $border-radius
     overflow: auto
+    cursor: default
 
     h1
         font-size: 30px
@@ -115,8 +134,22 @@ footer
     overflow: auto
     height: 500px
     width: 400px
+    cursor: default
 
     h1
         font-size: 30px
         font-weight: 700
         text-align: center
+        padding: 10px
+
+    h2
+        width: 80%
+
+    svg
+        height: 25px
+        width: 25px
+        margin: 10px
+        cursor: pointer
+
+    .friend-card
+        padding: 0 20px
