--- a/client/src/styles/_components.sass
+++ b/client/src/styles/_components.sass
@@ -146,10 +146,15 @@ footer
         width: 80%
 
     svg
-        height: 25px
-        width: 25px
+        height: 35px
+        width: 35px
         margin: 10px
         cursor: pointer
 
     .friend-card
         padding: 0 20px
+
+    img
+        border-radius: 50%
+        height: 40px
+        margin-right: 15px
