--- a/client/src/styles/_pages.sass
+++ b/client/src/styles/_pages.sass
@@ -34,9 +34,10 @@
             img
                 width: 150px
                 border-radius: 50%
+                margin-right: 40px
 
             h1
-                font-size: 40px
+                font-size: 30px
 
             svg
                 height: 20px
@@ -47,6 +48,18 @@
                 border: none
                 border-radius: 15px
                 padding: 10px
-                margin-left: 10px
+                margin-left: 30px
                 font-weight: 700
                 color: $color-white
+
+// Not Found
+.not-found
+    h1
+        font-size: 50px
+        margin-bottom: 20px
+        background-color: $color-red
+        color: $color-white
+        padding: 20px
+        border-radius: 15px
+        margin: 20px
+        font-weight: 700
