Minor changes to loading screen.

--- a/client/src/styles/_components.sass
+++ b/client/src/styles/_components.sass
@@ -44,6 +44,7 @@ header
 // Footer
 footer
     min-width: 100vw
+    padding: 20px
 
     a
         padding: 0 10px
@@ -158,3 +159,7 @@ footer
         border-radius: 50%
         height: 40px
         margin-right: 15px
+
+.loading
+    font-size: 30px
+    color: $color-teal-dark
