Color changes for icons.

--- a/client/src/styles/_variables.sass
+++ b/client/src/styles/_variables.sass
@@ -7,7 +7,7 @@ $color-pink-light: #f7dae4
 $color-pink-dark: #f3b9c6
 $color-blue-light: #0371e7
 $color-blue-dark: #094b92
-$color-green: #28a745
+$color-green: #28a77d
 $color-yellow: #ffc107
 $color-red: #dc3545
 $color-white: #f8f9fa
