--- a/client/src/styles/_utilities.sass
+++ b/client/src/styles/_utilities.sass
@@ -135,9 +135,20 @@
     align-items: center
     z-index: 1000 /* Ensure it appears in front of other elements */
 
+// ___________________________________
 // Shadow Utilities
 .shadow
     box-shadow: 0 0 10px rgba(54, 55, 58, 0.24)
 
 .shadow-harsh
     box-shadow: 0 0 10px rgba(25, 25, 26, 0.699)
+
+// ___________________________________
+// Focus Utilities
+
+.focus-none
+    outline: none !important
+    outline-width: 0 !important
+    box-shadow: none
+    -moz-box-shadow: none
+    -webkit-box-shadow: none
