--- a/client/src/styles/_variables.sass
+++ b/client/src/styles/_variables.sass
@@ -12,6 +12,7 @@ $color-yellow: #ffc107
 $color-red: #dc3545
 $color-white: #f8f9fa
 $color-gray-light: #cfd9dd
+$color-gray-dark: #687681
 $color-black: #31373d
 
 // Border Radius
