Fixed search box styling.

--- a/client/src/styles/_components.sass
+++ b/client/src/styles/_components.sass
@@ -28,24 +28,24 @@ header
         width: 450px
 
 .search-form
-    background-color: $color-white
-    border-radius: $border-radius
     width: 200px
 
     svg
         height: 20px
         width: 20px
-        margin-left: 10px
+        margin-left: 12px
+        margin-top: -10px
+        position: absolute
 
     input
-        background-color: transparent
-        width: 150px
+        background-color: $color-white
+        border-radius: $border-radius
+        width: 200px
         border: none
         font-size: 16px
         color: $color-black
-
-        &:focus
-            outline: none
+        outline: none
+        padding-left: 40px
 
 // Footer
 footer
