--- a/client/src/styles/_utilities.sass
+++ b/client/src/styles/_utilities.sass
@@ -147,8 +147,5 @@
 // Focus Utilities
 
 .focus-none
-    outline: none !important
-    outline-width: 0 !important
-    box-shadow: none
-    -moz-box-shadow: none
-    -webkit-box-shadow: none
+    outline: none
+    border: none
