--- a/client/src/styles/_components.sass
+++ b/client/src/styles/_components.sass
@@ -7,7 +7,6 @@ header
     min-width: 100vw
 
     .logo
-        width: 280px
         height: 100%
         display: flex
         justify-content: flex-end
@@ -29,6 +28,7 @@ header
 
 .search-form
     width: 200px
+    padding-left: 10px
 
     svg
         height: 20px
